--- a/green-2.yaml
+++ b/green-2.yaml
@@ -6,11 +6,11 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: app
+      app: green-app
   template:
     metadata:
       labels:
-        app: app
+        app: green-app
     spec:
       containers:
       - name: app
